<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en"
	tools:ignore="MissingTranslation">
    <string name="app_name">uNote</string>
    <string name="settings">Settings</string>
	<string name="addNoteB">Add note</string>
	<string name="searchText">Search</string>
	<string name="search">Search</string>
	<string name="quit">Quit</string>
	<string name="action_multi">Select mode</string>
	<string name="item_selected">selected note(s)</string>
	<string name="returnB">Return</string>
	<string name="save">Save</string>
	<string name="TexteEdition">Note</string>
	<string name="TitreEdition">Title</string>
	<string name="editTitle_hint">Note\'s Title</string>
	<string name="editText_hint">Your Note</string>
	<string name="preferences">Preferences</string>
	<string name="pref_cat_search">Search</string>
	<string name="pref_cat_display">Display</string>
	<string name="pref_cat_confirmation">Delete and cancel behavior</string>
	<string name="pref_search">Search in content</string>
	<string name="pref_search_sum">Search also in the notes\' content but not in note protected by password</string>
	<string name="pref_sensitive_search">Case sensitive research </string>
	<string name="pref_word_search">Match exact word </string>
	<string name="cb_word_search">Match word</string>
	<string name="cb_sensitive_search">Ignore case</string>
	<string name="pref_display_search_option">Display search options</string>
	<string name="pref_search_option_orientation">Vertical search options</string>
	<string name="pref_search_note_count">Display number of found inside note search</string>
	<string name="pref_date">Creation date</string>
	<string name="pref_date_sum">Display creation date</string>
	<string name="pref_date_mod">Modification Date</string>
	<string name="pref_date_mod_sum">Display modification date</string>
	<string name="pref_theme_system">Follow system theme</string>
	<string name="pref_theme">Light theme</string>
	<string name="pref_theme_sum">Light or dark theme</string>
	<string name="pref_delete_confirmation">Delete confirmation</string>
	<string name="pref_cancel_confirmation">Cancel confirmation</string>
	<string name="pref_backButton_action">Back button action</string>
	<string name="pref_backButton_action_summary">Define behaviour when back button pressed</string>
	<string name="pref_sort">Descending sort</string>
	<string name="pref_sort_by">Sort by</string>
	<string name="pref_notifications">Display notifications</string>
	<string name="pref_text_size">Text Size</string>
	<string name="pref_text_size_custom">Custom text size</string>
	<string name="pref_text_size_custom_summary">Choose Custom entry in Text Size</string>
	<string name="pref_text_size_button_custom">Custom text size for buttons</string>
	<string name="pref_main_button_orientation">Main screen buttons horizontal</string>
	<string name="pref_edition_button_orientation">Edition buttons horizontal</string>
	<string name="pref_export_note">Note export</string>
	<string name="pref_export_note_date">Add date to note filename</string>
	<string name="pref_export_note_title_short">Use title instead of id in note filename</string>
	<string name="pref_export_note_title">Use note\'s title for the export filename instead of id</string>
	<string name="pref_db">Database</string>
	<string name="pref_export_db">Export database</string>
	<string name="pref_export_db_zip">Export database in a zip archive</string>
	<string name="pref_export_db_zip_summary">Zip file can be protected with password</string>
	<string name="pref_import_db">Import database</string>
	<string name="pref_import_db_zip">Import database from a zip archive</string>
	<string name="pref_import_csv">Import from csv</string>
	<string name="pref_import_csv_summary">Import notes from csv file (add to existing ones)</string>
	<string name="pref_preview_limit">Preview limit</string>
	<string name="pref_preview_limit_summary">Number of characters per note previewed</string>
	<string name="pref_preview_formatting">Respect formatting in preview</string>
	<string name="pref_keep_position_scroll">Keep scrolling position</string>
	<string name="pref_export_csv_db">Export csv</string>
	<string name="pref_export_csv_db_summary">Export all non-password protected notes into csv format file</string>
	<string name="pref_export_csv_db_summary_all">Export all notes into csv format file</string>
	<string name="pref_export_all_notes_summary">Export all non-password protected notes in plain text in a folder</string>
	<string name="pref_export_all_notes">Export all notes in plain text</string>
	<string name="pref_export_note_folder_timestamped">Timestamped folder</string>
	<string name="pref_export_note_folder_timestamped_summary">Export all notes in a timestamped folder</string>
	<string name="export_info_path">Export path </string>
	<string name="export_path_select">Change export path </string>
	<string name="export_path_select_summary">Current path </string>
	<string name="pref_main_mode_menu_all">Display all menus in the main window</string>
	<string name="pref_edit_mode_view">Set preview as note edition default display</string>
	<string name="pref_edit_mode_menu_all">Display all menus in edition mode</string>
	<string name="pref_edit_mode_view_ui">New interface for preview note</string>
	<string name="pref_edit_mode_edit_ui">New interface for editing note</string>
	<string name="pref_cat_editing">Edition</string>
	<string name="pref_edit_cursor_title_new_note">Set cursor on title when new note</string>
	<string name="pref_edit_cursor_end">Set cursor at the end when opening note</string>
	<string name="pref_edit_capitalize_title">Enable capitalization on title</string>
	<string name="pref_edit_capitalize_note">Enable capitalization on note content</string>
	<string name="pref_edit_note_padding_left">Left padding for note\'s content in edition screen</string>
	<string name="pref_edit_note_padding_right">Right padding for note\'s content in edition screen</string>
	<string name="pref_edit_note_padding_top">Top padding for note\'s content in edition screen</string>
	<string name="pref_edit_note_padding_bottom">Bottom padding for note\'s content in edition screen</string>
	<string name="pref_note_padding_main">Padding for notes in main screen</string>
	<string name="pref_cat_text_color">Color in main screen</string>
	<string name="pref_cat_text_color_edition">Color in edition</string>
	<string name="pref_color_bg">Background color screen</string>
	<string name="pref_color_bar">Action bar color screen</string>
	<string name="pref_note_button_bottom_main">Color of bottom buttons in main screen</string>
	<string name="pref_note_button_bottom_edit">Color of bottom buttons in edition screen</string>
	<string name="pref_note_text_color_main">Global text color on main screen</string>
	<string name="pref_note_text_color_main_bool">Use specific colors on main screen</string>
	<string name="pref_note_text_color_title">Title\'s color</string>
	<string name="pref_note_text_color_note">Note header\'s color</string>
	<string name="pref_note_text_color_details">Details color</string>
	<string name="pref_note_text_color_edit_all">Text Color in edition screen</string>
	<string name="pref_note_text_color_edit_bool">Use specific colors on edition screen</string>
	<string name="pref_note_text_color_title_edit">Title\'s color</string>
	<string name="pref_note_text_color_note_edit">Note\'s color</string>
	<string name="pref_note_text_color_note_edit_desc">Note description\'s color</string>
	<string name="pref_note_text_color_title_edit_desc">Title description\'s color</string>
	<string name="pref_cat_cipher">Encryption</string>
	<string name="pref_cipher_notes">Cipher notes by default</string>
	<string name="pref_cipher_notes_summary">when adding a password</string>
	<string name="cb_cipher_note">Cipher the note</string>
	<string name="toast_export_db">Database exported in </string>
	<string name="toast_import_db">Database imported from </string>
	<string name="toast_import_no_db">No database found, please export first.</string>
	<string name="toast_export_all_notes">All notes exported in </string>
	<string name="toast_import_csv_added"> note(s) added</string>
	<string name="toast_save">Saved</string>
	<string name="toast_update">Note updated</string>
	<string name="toast_fail">Failed</string>
	<string name="toast_titleCancel">Cancel modification</string>
	<string name="toast_msgCancel">Are you sure?</string>
	<string name="toast_positiveButton">Yes</string>
	<string name="toast_negativeButton">No</string>
	<string name="pwd_protected">Password Protected</string>
	<string name="note_deleted">Note deleted !</string>
	<string name="note_exported">Note exported</string>
	<string name="note_copied">Note copied</string>
	<string name="note_duplicated">Note duplicated</string>
	<string name="toast_pwd_error">Incorrect password</string>
	<string name="selected_notes_deleted">selected note(s) deleted</string>
	<string name="menu_title">Note Menu</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_passwd">Password</string>
	<string name="menu_export">Export</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_share">Share</string>
	<string name="menu_detail">Details</string>
	<string name="menu_copy">Copy content</string>
	<string name="menu_duplicate">Duplicate</string>
	<string name="detail_title">Title</string>
	<string name="detail_nb_char">Number of characters</string>
	<string name="detail_created">Created the </string>
	<string name="detail_modified">Modified the </string>
	<string name="detail_not_modified">Not Modified </string>
	<string name="detail_number_notes">Number of notes</string>
	<string name="dialog_pwd_title">Asking password</string>
	<string name="dialog_pwd_msg">Enter Password</string>
	<string name="dialog_pwd_submit">Submit</string>
	<string name="dialog_pwd_cancel">Cancel</string>
	<string name="dialog_delete_title">Deleting Note</string>
	<string name="dialog_delete_msg">Are you sure?</string>
	<string name="dialog_delete_yes">Yes</string>
	<string name="dialog_delete_no">No</string>
	<string name="dialog_add_pwd_title">Adding password</string>
	<string name="dialog_add_pwd_msg">Enter Password</string>
	<string name="dialog_add_pwd_remove">Remove</string>
	<string name="dialog_add_pwd_add">Add</string>
	<string name="dialog_add_pwd_cancel">Cancel</string>
	<string name="toast_pwd_added">Password added !</string>
	<string name="dialog_zip_title">Export database as Zip archive</string>
	<string name="dialog_zip_msg">Keep empty to not cipher the zip archive or enter password to protect</string>
	<string name="dialog_zip_export_action">Export</string>
	<string name="restoreWarnTitle">Restore database</string>
	<string name="restoreWarnMessage">This will overwrite all the existing notes. Continue?</string>
	<string name="restoreWarnPositive">Yes</string>
	<string name="restoreWarnNegative">No</string>
	<string name="restoreToastInvalidDB">That database was invalid or corrupted! Not restored.</string>
	<string name="restoreToastMountProblem">Media not mounted or read-only</string>
	<string name="restoreToastUnableToMove">Unable to move old database out of the way.</string>
	<string name="restoreToastCopyFailed">Failed to restore database into place. Nothing restored.</string>
	<string name="restoreToastRestoreFinished">Database restored.</string>
	<string name="dialog_backup_menu">Backup Option</string>
	<string name="dialog_backup_menu_deletion">Delete this backup</string>
	<string name="dialog_delete_backup">Delete Backup</string>
	<string name="dialog_backup_rename">Rename Backup</string>
	<string name="pref_button_color">Buttons color</string>
	<string name="pref_autosave_interval">Autosave interval in second</string>
	<string name="pref_autosave_interval_summary">0 to disable</string>
	<string name="pref_screen_global">Global</string>
	<string name="pref_screen_main">Main screen</string>
</resources>