<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_cat_editing">
    <PreferenceCategory android:title="@string/pref_cat_display">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_mode_menu_all"
            android:title="@string/pref_edit_mode_menu_all" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_mode_view"
            android:title="@string/pref_edit_mode_view" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_edit_mode_view_ui"
            android:title="@string/pref_edit_mode_view_ui" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_mode_edit_ui"
            android:title="@string/pref_edit_mode_edit_ui" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_forceEditionButtonsH"
            android:title="@string/pref_edition_button_orientation" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_editing">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_cursor_title_new_note"
            android:title="@string/pref_edit_cursor_title_new_note" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_cursor_end"
            android:title="@string/pref_edit_cursor_end" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_capitalize_title"
            android:title="@string/pref_edit_capitalize_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_capitalize_note"
            android:title="@string/pref_edit_capitalize_note" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="pref_autosave_interval"
            android:maxLength="4"
            android:summary="@string/pref_autosave_interval_summary"
            android:title="@string/pref_autosave_interval" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_search">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_mode_search_sensitive"
            android:title="@string/pref_sensitive_search" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_edit_mode_search_word"
            android:title="@string/pref_word_search" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_text_color_edition">
        <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
            android:key="pref_note_button_edit"
            android:defaultValue="0xff999999"
            app:resetValue="0xff999999"
            android:title="@string/pref_button_color" />
        <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff999999"
            app:resetValue="0xff999999"
            android:key="pref_note_text_color_edit_all"
            android:title="@string/pref_note_text_color_edit_all" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_note_text_color_edit_bool"
            android:title="@string/pref_note_text_color_edit_bool" />
        <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff999999"
            app:resetValue="0xff999999"
            android:key="pref_note_text_color_title_edit"
            android:title="@string/pref_note_text_color_title_edit" />
        <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff999999"
            android:key="pref_note_text_color_note_edit"
            android:title="@string/pref_note_text_color_note_edit" />
        <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff999999"
            app:resetValue="0xff999999"
            android:key="pref_note_text_color_note_edit_desc"
            android:title="@string/pref_note_text_color_note_edit_desc" />
        <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff999999"
            app:resetValue="0xff999999"
            android:key="pref_note_text_color_title_edit_desc"
            android:title="@string/pref_note_text_color_title_edit_desc" />
    </PreferenceCategory>
</PreferenceScreen>	