<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/preferences">
    <Preference
        android:key="pref_cat_search"
        android:title="@string/pref_cat_search"
        android:summary=""/>
    <Preference
        android:key="pref_cat_display"
        android:title="@string/pref_cat_display"
        />
    <Preference
        android:key="pref_cat_editing"
        android:title="@string/pref_cat_editing"
        />
    <Preference
        android:key="pref_cat_text_color"
        android:title="@string/pref_cat_text_color"
        />
    <Preference
        android:key="pref_cat_text_color_edition"
        android:title="@string/pref_cat_text_color_edition"
        />
    <Preference
        android:key="pref_text_size"
        android:title="@string/pref_text_size"
        />
    <Preference
        android:key="pref_cat_confirmation"
        android:title="@string/pref_cat_confirmation"
        />
    <Preference
        android:key="pref_export"
        android:title="@string/pref_export_note"
        />
</PreferenceScreen>	