<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="contentSearch"
        android:summary="@string/pref_search_sum"
        android:title="@string/pref_search" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sensitiveSearch"
        android:title="@string/pref_sensitive_search" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="displaySearchOptions"
        android:title="@string/pref_display_search_option" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_searchCheckboxV"
        android:title="@string/pref_search_option_orientation" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_search_note_count"
        android:title="@string/pref_search_note_count" />
</PreferenceScreen>