<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
        android:key="pref_note_button_edit"
        android:defaultValue="0xff999999"
        app:resetValue="0xff999999"
        android:title="@string/pref_button_color" />
    <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
        android:defaultValue="0xff999999"
        app:resetValue="0xff999999"
        android:key="pref_note_text_color_edit_all"
        android:title="@string/pref_note_text_color_edit_all" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_note_text_color_edit_bool"
        android:title="@string/pref_note_text_color_edit_bool" />
    <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
        android:defaultValue="0xff999999"
        app:resetValue="0xff999999"
        android:key="pref_note_text_color_title_edit"
        android:title="@string/pref_note_text_color_title_edit" />
    <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
        android:defaultValue="0xff999999"
        android:key="pref_note_text_color_note_edit"
        android:title="@string/pref_note_text_color_note_edit" />
    <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
        android:defaultValue="0xff999999"
        app:resetValue="0xff999999"
        android:key="pref_note_text_color_note_edit_desc"
        android:title="@string/pref_note_text_color_note_edit_desc" />
    <app.varlorg.ambilwarna.widget.AmbilWarnaPreference
        android:defaultValue="0xff999999"
        app:resetValue="0xff999999"
        android:key="pref_note_text_color_title_edit_desc"
        android:title="@string/pref_note_text_color_title_edit_desc" />
</PreferenceScreen>